--- a/kv-support-tech/angular/src/manifest.json
+++ b/kv-support-tech/angular/src/manifest.json
@@ -1,28 +1,26 @@
 {
   "manifest_version": 3,
-  "name": "kv-support-tech",
+  "name": "Facebook POS Tester",
   "short_name": "kv-support-tech",
   "version": "1.0.0",
   "description": "Generated with @anhhn",
-  "permissions": [
-    "tabs",
-    "storage"
-  ],
+  "permissions": ["tabs", "storage"],
   "action": {
     "default_popup": "index.html?#/popup",
-    "default_title": "Kv Support Extension"
+    "default_title": "Facebook POS Tester"
   },
   "content_scripts": [
     {
-      "js": [
-        "contentPage.js"
-      ],
-      "matches": [
-        "https://*.kiotviet.vn/*",
-        "https://*.kiotviet.com/*"
-      ]
+      "js": ["contentPage.js"],
+      "matches": ["https://*.kiotviet.vn/*", "https://*.kiotviet.com/*", "https://*.kvpos.com/*"]
     }
   ],
+  "icons": {
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
+  },
   "background": {
     "service_worker": "serviceWorker.js"
   },
